--- a/app/src/main/res/drawable/gradient_header.xml
+++ b/app/src/main/res/drawable/gradient_header.xml
@@ -4,7 +4,7 @@
 
     <gradient
         android:angle="0"
-        android:startColor="#4CAF50"
-        android:endColor="#FFFFFF"
+        android:startColor="#0288D1"
+        android:endColor="#B3E5FC"
         android:type="linear" />
 </shape>
