--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#B3E5FC"
     android:orientation="vertical"
     android:padding="24dp"
     android:layout_marginTop="50dp"
@@ -85,10 +85,10 @@
         android:id="@+id/btn_change_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#00695C"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/holo_red_dark"
         android:text="ĐỔI MẬT KHẨU"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="16dp"/>
+        android:textColor="#FFFFFF" />
 
     <!-- Back to Login Link -->
     <TextView
