--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#B3E5FC"
     android:fillViewport="true">
 
     <LinearLayout
@@ -58,11 +58,11 @@
             android:id="@+id/btn_send_reset_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="@android:color/holo_red_dark"
             android:text="Gửi email đặt lại mật khẩu"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#00695C"
-            android:layout_marginTop="24dp"/>
-        <!-- Dang nhap -->
+            android:textColor="#FFFFFF" />
+         <!-- Dang nhap -->
         <TextView
             android:id="@+id/txtLogin"
             android:layout_width="wrap_content"
