--- a/app/src/main/res/layout/activity_crud_showtime.xml
+++ b/app/src/main/res/layout/activity_crud_showtime.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5">
+    android:background="#B3E5FC">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +38,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="24dp"
         android:contentDescription="Thêm suất chiếu"
-        app:srcCompat="@android:drawable/ic_input_add"
-        app:backgroundTint="#1976D2" />
+        app:backgroundTint="@color/white"
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout> 
