--- a/app/src/main/res/layout/activity_khac.xml
+++ b/app/src/main/res/layout/activity_khac.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F7FA">
+    android:background="#B3E5FC">
 
     <!-- Header with User Avatar -->
     <com.google.android.material.card.MaterialCardView
