--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#00695C"
+            android:backgroundTint="@android:color/holo_red_dark"
             android:text="ĐĂNG NHẬP"
             android:textColor="#FFFFFF" />
 
