--- a/app/src/main/res/layout/item_showtime.xml
+++ b/app/src/main/res/layout/item_showtime.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="#B3E5FC">
 
         <TextView
             android:id="@+id/tvShowtimeFilm"
