--- a/app/src/main/res/drawable/edit_text_border.xml
+++ b/app/src/main/res/drawable/edit_text_border.xml
@@ -5,5 +5,5 @@
         android:width="1dp"
         android:color="#D4A017"/>
     <corners android:radius="8dp"/>
-    <solid android:color="#FFF5E6"/>
+    <solid android:color="#ADD8E6"/>
 </shape>
