--- a/app/src/main/res/layout/item_seat.xml
+++ b/app/src/main/res/layout/item_seat.xml
@@ -12,7 +12,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:textSize="14sp"
-        android:textColor="@android:color/white"
+        android:textColor="#00FFFF"
         android:padding="4dp"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
